[gd_scene load_steps=2 format=3 uid="uid://cm88fwq5p6ccj"]

[ext_resource type="Script" path="res://Scenes/account_creation.gd" id="1_850mv"]

[node name="AccountCreation" type="Node"]
script = ExtResource("1_850mv")

[node name="AccountCreation_UI_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AccountCreation_UI_Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -77.5
offset_right = 84.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="AccountCreation_Username_Label" type="Label" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2
text = "Username:                    "

[node name="AccountCreation_Username_LineEdit" type="LineEdit" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2

[node name="AccountCreation_Password_Label" type="Label" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2
text = "Password:"

[node name="AccountCreation_Password_LineEdit" type="LineEdit" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2

[node name="AccountCreation_Create_Button" type="Button" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2
text = "Create
"

[node name="AccountCreation_Back_Button" type="Button" parent="AccountCreation_UI_Control/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="AccountCreation_UI_Control/VBoxContainer/AccountCreation_Create_Button" to="." method="_on_account_creation_create_button_pressed"]
[connection signal="pressed" from="AccountCreation_UI_Control/VBoxContainer/AccountCreation_Back_Button" to="." method="_on_account_creation_back_button_pressed"]
